# sql-server-healthcheck-poc

./: .env.example  .gitignore  Dockerfile  README.md  check_open_tx.py  create_open_tx.sql  create_test_transaction.py  docker-compose.yml  pyproject.toml  requirements.txt  test-setup.sh  test_ai_analysis.py  test_kill.py
alerting/: rules.yaml
elastic/: index-template-alerts.json  index-template-metrics.json
sample_inputs/: sample_metrics.jsonl
sample_queries/: DETAILED_PROBLEMS.sql  create_test_database.sql  problem_generator.sql
src/dbmon/: __init__.py  alerts.py  cli.py  collector.py  dashboard.py  elastic.py  explainer.py  sample_loader.py  settings.py  sql_queries.py  stress.py
static/: index.html
